--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,5 +10,7 @@
   <h1><a href="/">Django Girls Blog</a></h1>
 </div>
 
+<a href="{% url 'post_new' %}">add new post</a>
+
 {% block content %}
 {% endblock %}
